<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.booksaw.betterTeams</groupId>
	<artifactId>BetterTeams</artifactId>
	<version>4.8.4</version>
	<name>BetterTeams</name>
	<packaging>jar</packaging>
	<description>Create teams to fight to be the best</description>
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>
				https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>codemc-repo</id>
			<url>https://repo.codemc.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>sk89q-repo</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.16.5-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.10.9</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.booksaw</groupId>
			<artifactId>betterteams-deadends</artifactId>
			<version>f78733beff</version>
		</dependency>
		<dependency>
			<groupId>com.gmail.filoghost.holographicdisplays</groupId>
			<artifactId>holographicdisplays-api</artifactId>
			<version>2.4.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.decentsoftware-eu</groupId>
			<artifactId>decentholograms</artifactId>
			<version>2.8.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sk89q.worldguard</groupId>
			<artifactId>worldguard-bukkit</artifactId>
			<version>7.0.4</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>io.papermc</groupId>
					<artifactId>paperlib</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.craftaro</groupId>
			<artifactId>UltimateClaims</artifactId>
			<version>2.0.0</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>BetterTeams</finalName>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<outputDirectory>${basedir}/server/plugins</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.2</version>
				<configuration>
					<reportOutputDirectory>docs\javadocs</reportOutputDirectory>
					<sourcepath>src/main/java</sourcepath>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/plugin.yml</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/plugin.yml</exclude>
				</excludes>
			</resource>
		</resources>
	</build>
</project>